--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,7 @@ jobs:
         run: |
           bundle install --jobs 4 --retry 3
 
+      - uses: actions/setup-node@v4
       - uses: oven-sh/setup-bun@v1
 
       - name: Run tests
