--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+/.bundle/
 .byebug_history
 *.gem
+/tmp/
+/node_modules
+**/tmp/
+
+# Ignore Gemfile.lock files for Rails main branch.
 /gemfiles/rails_main*.gemfile.lock
