--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ jobs:
           - gemfiles/rails_6_1.gemfile
           - gemfiles/rails_7_0.gemfile
           - gemfiles/rails_7_1.gemfile
+          - gemfiles/rails_7_2.gemfile
           - gemfiles/rails_main.gemfile
         continue-on-error: [ false ]
 
