--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,13 +9,26 @@ jobs:
           - "3.1"
           - "3.2"
           - "3.3"
+          - "3.4"
         gemfile:
           - gemfiles/rails_6_1.gemfile
           - gemfiles/rails_7_0.gemfile
           - gemfiles/rails_7_1.gemfile
           - gemfiles/rails_7_2.gemfile
+          - gemfiles/rails_8_0.gemfile
           - gemfiles/rails_main.gemfile
         continue-on-error: [ false ]
+        exclude:
+          - ruby-version: "3.3"
+            gemfile: gemfiles/rails_6_1.gemfile
+          - ruby-version: "3.4"
+            gemfile: gemfiles/rails_6_1.gemfile
+          - ruby-version: "3.4"
+            gemfile: gemfiles/rails_7_0.gemfile
+          - ruby-version: "3.1"
+            gemfile: gemfiles/rails_8_0.gemfile
+          - ruby-version: "3.1"
+            gemfile: gemfiles/rails_main.gemfile
 
     name: ${{ format('Tests (Ruby {0}, {1})', matrix.ruby-version, matrix.gemfile) }}
     runs-on: ubuntu-latest
